<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wht"
    tools:context=".Main">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/germania_one"
        android:text="@string/name"
        android:textColor="@color/blc"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butt_h1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/butt_h1"
        android:textSize="20sp"
        android:fontFamily="@font/germania_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text" />

    <Button
        android:id="@+id/butt_h2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/butt_h2"
        android:textSize="20sp"
        android:fontFamily="@font/germania_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt_h1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/butt_h2">

        <RadioButton
            android:id="@+id/radioBinary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/germania_one"
            android:text="@string/bin" />

        <RadioButton
            android:id="@+id/radioOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/germania_one"
            android:text="@string/oct" />

        <RadioButton
            android:id="@+id/radioHex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/germania_one"
            android:text="@string/hex" />
    </RadioGroup>

    <TextView
        android:id="@+id/hash1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/hash"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/hash2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/hash"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hash1" />

    <Button
        android:id="@+id/comp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/germania_one"
        android:onClick="createTextFiles"
        android:text="@string/comp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/hash2"
        app:toggleCheckedStateOnClick="false" />

    <TextView
        android:id="@+id/ans"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/ans"
        android:textSize="20sp"
        android:fontFamily="@font/germania_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comp" />

    <Button
        android:id="@+id/butt_me"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:onClick="Goto_me"
        android:text="@string/about"
        android:textSize="20sp"
        android:fontFamily="@font/germania_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans" />

    <Button
        android:id="@+id/butt_ex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/blc"
        android:onClick="End"
        android:text="@string/ex"
        android:textSize="20sp"
        android:fontFamily="@font/germania_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt_me" />



</androidx.constraintlayout.widget.ConstraintLayout>